[package]
name = "storage"
version.workspace = true
edition.workspace = true

[lints]
workspace = true 

[[test]]
name = "redis_basic_test"
path = "tests/redis_basic_test.rs"

[[test]]
name = "storage_basic_test"
path = "tests/storage_basic_test.rs"

[dependencies]
rocksdb.workspace = true 
log.workspace = true
thiserror.workspace = true
anyhow.workspace = true
parking_lot.workspace = true
byteorder.workspace = true
serde.workspace = true
serde_json.workspace = true
once_cell.workspace = true
num_cpus.workspace = true
murmur3.workspace = true
bytes.workspace = true
chrono.workspace = true
kstd.workspace = true
snafu.workspace = true
common-macro.workspace = true
tokio.workspace = true
tempfile.workspace = true
crc16.workspace = true
moka = { version = "0.12", features = ["sync"] }



